Fixed Issue with Slow Menu on Mobile

--- a/client/css/mobile.less
+++ b/client/css/mobile.less
@@ -39,7 +39,7 @@
 
     .sidebarCloseHitbox.not-showing {
         visibility: hidden;
-        transition: background-color 0.5s ease;
+        transition: background-color 0.25s ease;
         background-color: rgba(0, 0, 0, 0);
     }
     .sidebarCloseHitbox.showing {
@@ -49,7 +49,7 @@
         bottom: 0px;
         right: 0px;
 
-        transition: background-color 0.5s ease;
+        transition: background-color 0.25s ease;
 
         background-color: rgba(0, 0, 0, .4);
         z-index: 30;
@@ -58,14 +58,14 @@
     .sidebar.showing,
     .sidebar.showing .sidebar-top,
     .sidebar.showing .sidebar-bottom {
-        transition: left 0.5s ease;
+        transition: left 0.25s ease;
         left: 0px;
     }
 
     .sidebar.not-showing,
     .sidebar.not-showing .sidebar-top, 
     .sidebar.not-showing .sidebar-bottom, {
-        transition: left 0.5s ease;
+        transition: left 0.25s ease;
         left: -150px;
     }
 
